# danny_tries_catch

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  foo.cpp  foo.h
tests/: CMakeLists.txt  test_benchmark.h  test_fixtures.h  test_foo.h  test_generators.h  test_sections.h  test_simple.h  tests_main.cpp  tests_main.h
